<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <ImageView
                android:id="@+id/screenshot_image"
                android:layout_width="@dimen/size_200"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dialog_element_margin"
                android:layout_marginTop="@dimen/margin_8"
                android:contentDescription="@string/screenshot"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:text="@string/text_version_name"/>

                <TextView
                    android:id="@+id/version_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:text="@string/text_version_code"/>

                <TextView
                    android:id="@+id/version_code_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_author_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/text_hint_comment"/>

            <CheckBox
                android:id="@+id/box_slack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_slack"/>

            <CheckBox
                android:id="@+id/box_jira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_issue_jira"/>

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:hint="@string/text_hint_title"
                android:visibility="gone"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <include layout="@layout/progress_view"/>
</RelativeLayout>